--- a/database/caching.html
+++ b/database/caching.html
@@ -156,7 +156,7 @@ pertain to run-time operations.</p>
 <h2>$this->db->cache_on()&nbsp; / &nbsp; $this->db->cache_off()</h2>
 
 <p>Manually enables/disables caching.  This can be useful if you want to
-keep certain queries from being cached.  Example:</p>
+keep certain queries from being cached.  參考範例:</p>
 
 <code>
 // Turn caching on<br />
@@ -188,7 +188,7 @@ called <dfn>blog+comments</dfn>.  To delete those particular cache files you wil
 
 <h2>$this->db->cache_delete_all()</h2>
 
-<p>Clears all existing cache files.  Example:</p>
+<p>Clears all existing cache files.  參考範例:</p>
 
 <code>$this->db->cache_delete_all();</code>
 
