--- a/database/queries.html
+++ b/database/queries.html
@@ -114,7 +114,7 @@ Most of the time you'll use the above function rather than this one. Use the fun
 <h1>Query Bindings</h1>
 
 
-<p>Bindings enable you to simplify your query syntax by letting the system put the queries together for you. Consider the following example:</p>
+<p>Bindings enable you to simplify your query syntax by letting the system put the queries together for you. Consider the following 參考範例:</p>
 
 <code>
 $sql = "SELECT * FROM some_table WHERE id = <var>?</var> AND status = <var>?</var> AND author = <var>?</var>";
