--- a/general/controllers.html
+++ b/general/controllers.html
@@ -258,7 +258,7 @@ add a function named <dfn>_output()</dfn> to your controller that will receive t
 <p><strong>非常重要::</strong>&nbsp; If your controller contains a function named <kbd>_output()</kbd>，it will <strong>always</strong>
 be called by the output class instead of echoing the finalized data directly. The first parameter of the function will contain the finalized output.</p>
 
-<p>Here is an example:</p>
+<p>Here is an 參考範例:</p>
 
 <code>
 function _output($output)<br />
