--- a/general/creating_libraries.html
+++ b/general/creating_libraries.html
@@ -88,8 +88,8 @@ they are initialized.</p>
 <h2>Naming Conventions</h2>
 
 <ul>
-<li>File names must be capitalized. For example:&nbsp; <dfn>Myclass.php</dfn></li>
-<li>Class declarations must be capitalized. For example:&nbsp;  <kbd>class Myclass</kbd></li>
+<li>File names must be capitalized. For 參考範例:&nbsp; <dfn>Myclass.php</dfn></li>
+<li>Class declarations must be capitalized. For 參考範例:&nbsp;  <kbd>class Myclass</kbd></li>
 <li>Class names and file names must match.</li>
 </ul>
 
