--- a/general/errors.html
+++ b/general/errors.html
@@ -87,7 +87,7 @@ Note that CodeIgniter automatically shows 404 messages if controllers are not fo
 
 <p>This function lets you write messages to your log files.  You must supply one of three "levels"
 in the first parameter，indicating what type of message it is (debug，error，info)，with the message
-itself in the second parameter.  Example:</p>
+itself in the second parameter.  參考範例:</p>
 
 <code>
 if ($some_var == "")<br />
