--- a/general/styleguide.html
+++ b/general/styleguide.html
@@ -651,7 +651,7 @@ $query = $this->db->query("SELECT foo，bar，baz，foofoo，foobar AS raboof，
 	
 		<h2><a name="default_function_arguments"></a>Default Function Arguments</h2>
 		<div class="guidelineDetails">
-			<p>Whenever appropriate，provide function argument defaults，which helps prevent PHP errors with mistaken calls and provides common fallback values which can save a few lines of code. Example:</p>
+			<p>Whenever appropriate，provide function argument defaults，which helps prevent PHP errors with mistaken calls and provides common fallback values which can save a few lines of code. 參考範例:</p>
 
 <code>function foo($bar = ''，$baz = FALSE)</code>
 		</div>
