--- a/helpers/directory_helper.html
+++ b/helpers/directory_helper.html
@@ -72,7 +72,7 @@ Directory 補助函數
 <h2>directory_map('<var>source directory</var>')</h2>
 
 <p>This function reads the directory path specified in the first parameter
-and builds an array representation of it and all its contained files. Example:</p>
+and builds an array representation of it and all its contained files. 參考範例:</p>
 
 <code>$map = directory_map('./mydirectory/');</code>
 
