--- a/helpers/download_helper.html
+++ b/helpers/download_helper.html
@@ -73,7 +73,7 @@ Download 補助函數
 
 <p>Generates server headers which force data to be downloaded to your desktop. Useful with file downloads.
 The first parameter is the <strong>name you want the downloaded file to be named</strong>，the second parameter is the file data.
-Example:</p>
+參考範例:</p>
 
 <code>
 $data = 'Here is some text!';<br />
