--- a/helpers/file_helper.html
+++ b/helpers/file_helper.html
@@ -69,7 +69,7 @@ File 補助函數
 
 <h2>read_file('<var>path</var>')</h2>
 
-<p>Returns the data contained in the file specified in the path.  Example:</p>
+<p>Returns the data contained in the file specified in the path.  參考範例:</p>
 
 <code>$string = read_file('./path/to/file.php');</code>
 
@@ -83,7 +83,7 @@ might not work if you are trying to access a file above the calling script.</p>
 
 <h2>write_file('<var>path</var>'，<kbd>$data</kbd>)</h2>
 
-<p>Writes data to the file specified in the path.  If the file does not exist the function will create it. Example:</p>
+<p>Writes data to the file specified in the path.  If the file does not exist the function will create it. 參考範例:</p>
 
 <code>
 $data = 'Some file data';<br />
@@ -111,10 +111,10 @@ CodeIgniter uses a front controller so paths are always relative to the main sit
 
 <h2>delete_files('<var>path</var>')</h2>
 
-<p>Deletes ALL files contained in the supplied path.  Example:</p>
+<p>Deletes ALL files contained in the supplied path.  參考範例:</p>
 <code>delete_files('./path/to/directory/');</code>
 
-<p>If the second parameter is set to <kbd>true</kbd>，any directories contained within the supplied root path will be deleted as well. Example:</p>
+<p>If the second parameter is set to <kbd>true</kbd>，any directories contained within the supplied root path will be deleted as well. 參考範例:</p>
 
 <code>delete_files('./path/to/directory/'，TRUE);</code>
 
