--- a/helpers/string_helper.html
+++ b/helpers/string_helper.html
@@ -83,14 +83,14 @@ String 補助函數
 Returns a fixed length 32 character string.</li>
 </ul>
 
-<p>Usage example:</p>
+<p>使用範例:</p>
 
 <code>echo random_string('alnum'，16);</code>
 
 
 <h2>alternator()</h2>
 
-<p>Allows two or more items to be alternated between，when cycling through a loop.  Example:</p>
+<p>Allows two or more items to be alternated between，when cycling through a loop.  參考範例:</p>
 
 <code>for ($i = 0; $i < 10; $i++)<br />
 {<br />
@@ -111,24 +111,24 @@ Returns a fixed length 32 character string.</li>
 
 
 <h2>repeater()</h2>
-<p>Generates repeating copies of the data you submit. Example:</p>
+<p>Generates repeating copies of the data you submit. 參考範例:</p>
 <code>$string = "\n";<br />
 echo repeater($string，30);</code>
 
 <p>The above would generate 30 newlines.</p>
 <h2>reduce_double_slashes()</h2>
-<p>Converts double slashes in a string to a single slash，except those found in http://. Example: </p>
+<p>Converts double slashes in a string to a single slash，except those found in http://. 參考範例: </p>
 <code>$string = &quot;http://example.com//index.php&quot;;<br />
 echo reduce_double_slashes($string); // results in &quot;http://example.com/index.php&quot;</code>
 <h2>trim_slashes()</h2>
-<p>Removes any leading/trailing slashes from a string. Example:<br />
+<p>Removes any leading/trailing slashes from a string. 參考範例:<br />
 	<br />
 	<code>$string = &quot;/this/that/theother/&quot;;<br />
 echo trim_slashes($string); // results in this/that/theother</code></p>
 
 
 <h2>reduce_multiples()</h2>
-<p>Reduces multiple instances of a particular character occuring directly after each other. Example:</p>
+<p>Reduces multiple instances of a particular character occuring directly after each other. 參考範例:</p>
 <code>
 $string="Fred，Bill,，Joe，Jimmy";<br />
 $string=reduce_multiples($string,","); //results in "Fred，Bill，Joe，Jimmy"
@@ -137,7 +137,7 @@ $string=reduce_multiples($string,","); //results in "Fred，Bill，Joe，Jimmy"
 <code>reduce_multiples(string: text to search in，string: character to reduce，boolean: whether to remove the character from the front and end of the string)</code>
 
 The first parameter contains the string in which you want to reduce the multiplies. The second parameter contains the character you want to have reduced.
-The third parameter is FALSE by default; if set to TRUE it will remove occurences of the character at the beginning and the end of the string. Example:
+The third parameter is FALSE by default; if set to TRUE it will remove occurences of the character at the beginning and the end of the string. 參考範例:
 
 <code>
 $string=",Fred，Bill,，Joe，Jimmy,";<br />
@@ -146,13 +146,13 @@ $string=reduce_multiples($string，"，"，TRUE); //results in "Fred，Bill，Jo
 </p> 
 
 <h2>quotes_to_entities()</h2>
-<p>Converts single and double quotes in a string to the corresponding HTML entities. Example:</p>
+<p>Converts single and double quotes in a string to the corresponding HTML entities. 參考範例:</p>
 <code>$string="Joe's \"dinner\"";<br />
 $string=quotes_to_entities($string); //results in "Joe&amp;#39;s &amp;quot;dinner&amp;quot;"
 </code>
 
 <h2>strip_quotes()</h2>
-<p>Removes single and double quotes from a string. Example:</p>
+<p>Removes single and double quotes from a string. 參考範例:</p>
 <code>$string="Joe's \"dinner\"";<br />
 $string=strip_quotes($string); //results in "Joes dinner"
 </code>
