--- a/libraries/email.html
+++ b/libraries/email.html
@@ -188,7 +188,7 @@ will NOT need to use the <dfn>$this->email->initialize()</dfn> function if you s
 <code>$this->email->from('<var>you@example.com</var>'，'<var>Your Name</var>');</code>
 
 <h3>$this->email->reply_to()</h3>
-<p>Sets the reply-to address.  If the information is not provided the information in the "from" function is used. Example:</p>
+<p>Sets the reply-to address.  If the information is not provided the information in the "from" function is used. 參考範例:</p>
 <code>$this->email->reply_to('<var>you@example.com</var>'，'<var>Your Name</var>');</code>
 
 
@@ -258,7 +258,7 @@ conditionally:</p>
 
 <h3>$this->email->attach()</h3>
 <p>Enables you to send an attachment. Put the file path/name in the first parameter. 注意: Use a file path，not a URL.
-For multiple attachments use the function multiple times. For example:</p>
+For multiple attachments use the function multiple times. For 參考範例:</p>
 
 <code>$this->email->attach('/path/to/photo1.jpg');<br />
 $this->email->attach('/path/to/photo2.jpg');<br />
