--- a/libraries/file_uploading.html
+++ b/libraries/file_uploading.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>File Uploading Class : CodeIgniter 使用手冊</title>
+<title>File Uploading 類別 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-File Uploading Class
+File Uploading 類別
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,9 +56,9 @@ File Uploading Class
 <div id="content">
 
 
-<h1>File Uploading Class</h1>
+<h1>File Uploading 類別</h1>
 
-<p>CodeIgniter's File Uploading Class permits files to be uploaded.  You can set various
+<p>CodeIgniter's File Uploading 類別 permits files to be uploaded.  You can set various
 preferences，restricting the type and size of the files.</p>
 
 
@@ -205,7 +205,7 @@ controller is correct it should work.</p>
 <h1>Reference Guide</h1>
 
 
-<h2>Initializing the Upload Class</h2>
+<h2>Initializing the Upload 類別</h2>
 
 <p>Like most other classes in CodeIgniter，the Upload class is initialized in your controller using the <dfn>$this->load->library</dfn> function:</p>
 
@@ -429,7 +429,7 @@ Here is the array prototype:</p>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="form_validation.html">Form Validation Class</a>
+下個主題:&nbsp;&nbsp;<a href="form_validation.html">Form Validation 類別</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
