--- a/libraries/image_lib.html
+++ b/libraries/image_lib.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Image Manipulation Class : CodeIgniter 使用手冊</title>
+<title>Image Manipulation 類別 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Image Manipulation Class
+Image Manipulation 類別
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,7 +56,7 @@ Image Manipulation Class
 <div id="content">
 
 
-<h1>Image Manipulation Class</h1>
+<h1>Image Manipulation 類別</h1>
 
 <p>CodeIgniter's Image Manipulation class lets you perform the following actions:</p>
 
@@ -76,7 +76,7 @@ order for the script to calculate the image properties.  The image processing，
 library you specify.</p>
 
 
-<h2>Initializing the Class</h2>
+<h2>Initializing the 類別</h2>
 
 <p>Like most other classes in CodeIgniter，the image class is initialized in your controller
 using the <dfn>$this->load-&gt;library</dfn> function:</p>
@@ -442,7 +442,7 @@ containing your watermark over the source image.</li>
 
 <p>Just as with the other functions (resizing，cropping，and rotating) the general process for watermarking
 involves setting the preferences corresponding to the action you intend to perform，then
-calling the watermark function.  Here is an example:</p>
+calling the watermark function.  Here is an 參考範例:</p>
 
 <code>
 $config['source_image']	= '/path/to/image/mypic.jpg';<br />
@@ -653,11 +653,11 @@ will be positioned at the bottom/center of the image，20 pixels from the bottom
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="table.html">HTML Table Class</a>
+上個主題:&nbsp;&nbsp;<a href="table.html">HTML Table 類別</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="input.html">Input Class</a>
+下個主題:&nbsp;&nbsp;<a href="input.html">Input 類別</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
