--- a/libraries/loader.html
+++ b/libraries/loader.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Loader Class : CodeIgniter 使用手冊</title>
+<title>Loader 類別 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Loader Class
+Loader 類別
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,7 +56,7 @@ Loader Class
 <div id="content">
 
 
-<h1>Loader Class</h1>
+<h1>Loader 類別</h1>
 
 <p>Loader，as the name suggests，is used to load elements.  These elements can be libraries (classes) <a href="../general/views.html">View files</a>,
 <a href="../general/helpers.html">補助函數</a>，<a href="../general/plugins.html">Plugins</a>，or your own files.</p>
@@ -201,11 +201,11 @@ it will instead return the data as a string.</p>
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="input.html">Input Class</a>
+上個主題:&nbsp;&nbsp;<a href="input.html">Input 類別</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="language.html">Language Class</a>
+下個主題:&nbsp;&nbsp;<a href="language.html">Language 類別</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
