--- a/libraries/trackback.html
+++ b/libraries/trackback.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Trackback Class : CodeIgniter 使用手冊</title>
+<title>Trackback 類別 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Trackback Class
+Trackback 類別
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,14 +56,14 @@ Trackback Class
 <div id="content">
 
 
-<h1>Trackback Class</h1>
+<h1>Trackback 類別</h1>
 
-<p>The Trackback Class provides functions that enable you to send and receive Trackback data.</p>
+<p>The Trackback 類別 provides functions that enable you to send and receive Trackback data.</p>
 
 
 <p>If you are not familiar with Trackbacks you'll find more information <a href="http://en.wikipedia.org/wiki/Trackback">here</a>.</p>
 
-<h2>Initializing the Class</h2>
+<h2>Initializing the 類別</h2>
 
 <p>Like most other classes in CodeIgniter，the Trackback class is initialized in your controller using the <dfn>$this->load->library</dfn> function:</p>
 
@@ -73,7 +73,7 @@ Trackback Class
 
 <h2>Sending Trackbacks</h2>
 
-<p>A Trackback can be sent from any of your controller functions using code similar to this example:</p>
+<p>A Trackback can be sent from any of your controller functions using code similar to this 參考範例:</p>
 
 <code>$this->load->library('trackback');<br />
 <br />
@@ -233,11 +233,11 @@ It returns TRUE on success and FALSE on failure.  If it fails you will issue an 
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="sessions.html">Session Class</a>
+上個主題:&nbsp;&nbsp;<a href="sessions.html">Session 類別</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="parser.html">Template Parser Class</a>
+下個主題:&nbsp;&nbsp;<a href="parser.html">Template Parser 類別</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
