--- a/libraries/validation.html
+++ b/libraries/validation.html
@@ -615,7 +615,7 @@ For example，your "username" error will be available at:<br /><dfn>$this->valid
 </tr>
 </table>
 
-<p><strong>注意:</strong> These rules can also be called as discrete functions. For example:</p>
+<p><strong>注意:</strong> These rules can also be called as discrete functions. For 參考範例:</p>
 
 <code>$this->validation->required($string);</code>
 
@@ -638,7 +638,7 @@ For example，your "username" error will be available at:<br /><dfn>$this->valid
 
 <td class="td"><strong>xss_clean</strong></td>
 <td class="td">No</td>
-<td class="td">Runs the data through the XSS filtering function，described in the <a href="input.html">Input Class</a> page.</td>
+<td class="td">Runs the data through the XSS filtering function，described in the <a href="input.html">Input 類別</a> page.</td>
 </tr><tr>
 
 <td class="td"><strong>prep_for_form</strong></td>
@@ -687,7 +687,7 @@ these items to be retained in the event of an error.  The Validation class has t
 
 <p>Permits you to display the menu item that was selected.  The first parameter
 must contain the name of the select menu，the second parameter must contain the value of
-each item. Example:</p>
+each item. 參考範例:</p>
 
 <code>
 &lt;select name="myselect"><br />
@@ -701,7 +701,7 @@ each item. Example:</p>
 <h2>set_checkbox()</h2>
 
 <p>Permits you to display a checkbox in the state it was submitted.  The first parameter
-must contain the name of the checkbox，the second parameter must contain its value. Example:</p>
+must contain the name of the checkbox，the second parameter must contain its value. 參考範例:</p>
 
 <code>&lt;input type="checkbox" name="mycheck" value="1" <dfn>&lt;?php echo  $this->validation->set_checkbox('mycheck'，'1'); ?></dfn> /></code>
 
@@ -709,7 +709,7 @@ must contain the name of the checkbox，the second parameter must contain its va
 <h2>set_radio()</h2>
 
 <p>Permits you to display radio buttons in the state they were submitted.  The first parameter
-must contain the name of the radio button，the second parameter must contain its value. Example:</p>
+must contain the name of the radio button，the second parameter must contain its value. 參考範例:</p>
 
 <code>&lt;input type="radio" name="myradio" value="1" <dfn>&lt;?php echo  $this->validation->set_radio('myradio'，'1'); ?></dfn> /></code>
 
@@ -723,11 +723,11 @@ must contain the name of the radio button，the second parameter must contain it
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="user_agent.html">User Agent Class</a>
+上個主題:&nbsp;&nbsp;<a href="user_agent.html">User Agent 類別</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="xmlrpc.html">XML-RPC Class</a>
+下個主題:&nbsp;&nbsp;<a href="xmlrpc.html">XML-RPC 類別</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
