--- a/libraries/xmlrpc.html
+++ b/libraries/xmlrpc.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>XML-RPC and XML-RPC Server Classes : CodeIgniter 使用手冊</title>
+<title>XML-RPC and XML-RPC Server 類別es : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-XML-RPC and XML-RPC Server Classes
+XML-RPC and XML-RPC Server 類別es
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,7 +56,7 @@ XML-RPC and XML-RPC Server Classes
 <div id="content">
 
 
-<h1>XML-RPC and XML-RPC Server Classes</h1>
+<h1>XML-RPC and XML-RPC Server 類別es</h1>
 
 
 <p>CodeIgniter's XML-RPC classes permit you to send requests to another server，or set up
@@ -79,7 +79,7 @@ Once processed，the server will then send back a response message.</p>
 
 <p>For detailed specifications，you can visit the <a href="http://www.xmlrpc.com/">XML-RPC</a> site.</p>
 
-<h2>Initializing the Class</h2>
+<h2>Initializing the 類別</h2>
 
 <p>Like most other classes in CodeIgniter，the XML-RPC and XML-RPCS classes are initialized in your controller using the <dfn>$this->load->library</dfn> function:</p>
 
@@ -504,11 +504,11 @@ of values that you can send via XML-RPC:</p>
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="user_agent.html">User Agent Class</a>
+上個主題:&nbsp;&nbsp;<a href="user_agent.html">User Agent 類別</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="zip.html">Zip Encoding Class</a>
+下個主題:&nbsp;&nbsp;<a href="zip.html">Zip Encoding 類別</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
