--- a/overview/goals.html
+++ b/overview/goals.html
@@ -61,10 +61,9 @@ Goals
 
 <p>CodeIgniter 的目標是<dfn>用最小、最輕盈的套件，呈獻最大的效能、相容以及彈性</dfn>。</p>
 
-<p>To meet this goal we are committed to benchmarking，re-factoring，and simplifying at every step of the development process,
-rejecting anything that doesn't further the stated objective.</p>
+<p>為了滿足這個目標， 我們用了許多像 benchmarking、重構的方式，並簡化在開發過程的每個步驟，拒絕任何偏離唯一目標的可能。</p>
 
-<p>From a technical and architectural standpoint，CodeIgniter was created with the following objectives:</p>
+<p>以技術及建構的觀點看來，CodeIgniter 依照以下的目標建立:</p>
 
 <ul>
 <li><strong>Dynamic Instantiation.</strong>  In CodeIgniter，components are loaded and routines executed only when requested，rather than globally.  No assumptions are made by the system regarding what may be needed beyond the minimal core resources，so the system is very light-weight by default.  The events，as triggered by the HTTP request，and the controllers and views you design will determine what is invoked.</li>
