--- a/toc.html
+++ b/toc.html
@@ -95,22 +95,22 @@
 <h3>一般主題</h3>
 <ul>
 	<li><a href="./general/urls.html">CodeIgniter URLs</a></li>
-	<li><a href="./general/controllers.html">Controllers</a></li>
+	<li><a href="./general/controllers.html">控制器(Controllers)</a></li>
 	<li><a href="general/reserved_names.html">保留字</a></li>
-	<li><a href="./general/views.html">Views</a></li>
-	<li><a href="./general/models.html">Models</a></li>
+	<li><a href="./general/views.html">檢視(Views)</a></li>
+	<li><a href="./general/models.html">模型(Models)</a></li>
 	<li><a href="./general/helpers.html">補助函數</a></li>
 	<li><a href="./general/plugins.html">Plugins</a></li>
 	<li><a href="./general/libraries.html">使用 CodeIgniter 程式庫</a></li>
 	<li><a href="./general/creating_libraries.html">建立自己的程式庫</a></li>
 	<li><a href="./general/core_classes.html">新增核心類別</a></li>
 	<li><a href="./general/hooks.html">Hooks - Extending the Core</a></li>
-	<li><a href="./general/autoloader.html">Auto-loading Resources</a></li>
+	<li><a href="./general/autoloader.html">自動載入資源</a></li>
 	<li><a href="general/common_functions.html">通用函數</a></li>
 	<li><a href="./general/scaffolding.html">Scaffolding</a></li>
 	<li><a href="./general/routing.html">URI Routing</a></li>
 	<li><a href="./general/errors.html">錯誤處理</a></li>
-	<li><a href="./general/caching.html">Caching</a></li>
+	<li><a href="./general/caching.html">快取</a></li>
 	<li><a href="./general/profiling.html">Profiling Your Application</a></li>
 	<li><a href="./general/managing_apps.html">管理 Applications</a></li>
 	<li><a href="./general/alternative_php.html">Alternative PHP Syntax</a></li>
@@ -131,25 +131,25 @@
 <li><a href="./database/index.html">Database 類別</a></li>
 <li><a href="./libraries/email.html">Email 類別</a></li>
 <li><a href="./libraries/encryption.html">Encryption 類別</a></li>
-<li><a href="./libraries/file_uploading.html">File Uploading Class</a></li>
-<li><a href="./libraries/form_validation.html">Form Validation Class</a></li>
-<li><a href="./libraries/ftp.html">FTP Class</a></li>
-<li><a href="./libraries/table.html">HTML Table Class</a></li>
-<li><a href="./libraries/image_lib.html">Image Manipulation Class</a></li> 	
-<li><a href="./libraries/input.html">Input and Security Class</a></li>
-<li><a href="./libraries/loader.html">Loader Class</a></li>
-<li><a href="./libraries/language.html">Language Class</a></li>
-<li><a href="./libraries/output.html">Output Class</a></li>
-<li><a href="./libraries/pagination.html">Pagination Class</a></li>
-<li><a href="./libraries/sessions.html">Session Class</a></li>
-<li><a href="./libraries/trackback.html">Trackback Class</a></li>
-<li><a href="./libraries/parser.html">Template Parser Class</a></li>
-<li><a href="./libraries/typography.html">Typography Class</a></li>
-<li><a href="./libraries/unit_testing.html">Unit Testing Class</a></li>
-<li><a href="./libraries/uri.html">URI Class</a></li>
-<li><a href="./libraries/user_agent.html">User Agent Class</a></li>
-<li><a href="./libraries/xmlrpc.html">XML-RPC Class</a></li>
-<li><a href="./libraries/zip.html">Zip Encoding Class</a></li>
+<li><a href="./libraries/file_uploading.html">File Uploading 類別</a></li>
+<li><a href="./libraries/form_validation.html">Form Validation 類別</a></li>
+<li><a href="./libraries/ftp.html">FTP 類別</a></li>
+<li><a href="./libraries/table.html">HTML Table 類別</a></li>
+<li><a href="./libraries/image_lib.html">Image Manipulation 類別</a></li> 	
+<li><a href="./libraries/input.html">Input and Security 類別</a></li>
+<li><a href="./libraries/loader.html">Loader 類別</a></li>
+<li><a href="./libraries/language.html">Language 類別</a></li>
+<li><a href="./libraries/output.html">Output 類別</a></li>
+<li><a href="./libraries/pagination.html">Pagination 類別</a></li>
+<li><a href="./libraries/sessions.html">Session 類別</a></li>
+<li><a href="./libraries/trackback.html">Trackback 類別</a></li>
+<li><a href="./libraries/parser.html">Template Parser 類別</a></li>
+<li><a href="./libraries/typography.html">Typography 類別</a></li>
+<li><a href="./libraries/unit_testing.html">Unit Testing 類別</a></li>
+<li><a href="./libraries/uri.html">URI 類別</a></li>
+<li><a href="./libraries/user_agent.html">User Agent 類別</a></li>
+<li><a href="./libraries/xmlrpc.html">XML-RPC 類別</a></li>
+<li><a href="./libraries/zip.html">Zip Encoding 類別</a></li>
 </ul>
 
 
