--- a/database/examples.html
+++ b/database/examples.html
@@ -90,7 +90,7 @@ foreach ($query->result() as $row)<br />
 echo 'Total Results: ' . $query->num_rows();
 </code>
 
-<p>The above <dfn>result()</dfn> function returns an array of <strong>objects</strong>.  Example:  $row->title</p>
+<p>The above <dfn>result()</dfn> function returns an array of <strong>objects</strong>.  參考範例:  $row->title</p>
 
 
 <h2>Standard Query With Multiple Results (Array Version)</h2>
@@ -104,7 +104,7 @@ foreach ($query->result_array() as $row)<br />
 &nbsp;&nbsp;&nbsp;&nbsp;echo $row['email'];<br />
 }</code>
 
-<p>The above <dfn>result_array()</dfn> function returns an array of standard array indexes.  Example:  $row['title']</p>
+<p>The above <dfn>result_array()</dfn> function returns an array of standard array indexes.  參考範例:  $row['title']</p>
 
 
 <h2>Testing for Results</h2>
@@ -137,7 +137,7 @@ $row = $query->row();<br />
 echo $row->name;<br />
 </code>
 
-<p>The above <dfn>row()</dfn> function returns an <strong>object</strong>.  Example:  $row->name</p>
+<p>The above <dfn>row()</dfn> function returns an <strong>object</strong>.  參考範例:  $row->name</p>
 
 
 <h2>Standard Query With Single Result (Array version)</h2>
@@ -148,7 +148,7 @@ $row = $query->row_array();<br />
 echo $row['name'];<br />
 </code>
 
-<p>The above <dfn>row_array()</dfn> function returns an <strong>array</strong>.  Example:  $row['name']</p>
+<p>The above <dfn>row_array()</dfn> function returns an <strong>array</strong>.  參考範例:  $row['name']</p>
 
 
 <h2>Standard Insert</h2>
