--- a/database/fields.html
+++ b/database/fields.html
@@ -92,7 +92,7 @@ foreach ($query->list_fields() as $field)<br />
 <h2>$this->db->field_exists()</h2>
 
 <p>Sometimes it's helpful to know whether a particular field exists before performing an action.
-Returns a boolean TRUE/FALSE.  Usage example:</p>
+Returns a boolean TRUE/FALSE.  使用範例:</p>
 
 <code>
 if ($this->db->field_exists('field_name'，'table_name'))<br />
@@ -112,7 +112,7 @@ if ($this->db->field_exists('field_name'，'table_name'))<br />
 
 <p class="important">注意: Not all databases provide meta-data.</p>
 
-<p>Usage example:</p>
+<p>使用範例:</p>
 
 <code>
 $fields = $this->db->field_data('table_name');<br /><br />
