--- a/database/table_data.html
+++ b/database/table_data.html
@@ -65,7 +65,7 @@ Table Data
 
 <h2>$this->db->list_tables();</h2>
 
-<p>Returns an array containing the names of all the tables in the database you are currently connected to.  Example:</p>
+<p>Returns an array containing the names of all the tables in the database you are currently connected to.  參考範例:</p>
 
 <code>$tables = $this->db->list_tables();<br />
 <br />
@@ -79,7 +79,7 @@ foreach ($tables as $table)<br />
 <h2>$this->db->table_exists();</h2>
 
 <p>Sometimes it's helpful to know whether a particular table exists before running an operation on it.
-Returns a boolean TRUE/FALSE.  Usage example:</p>
+Returns a boolean TRUE/FALSE.  使用範例:</p>
 
 <code>
 if ($this->db->table_exists('table_name'))<br />
