--- a/general/views.html
+++ b/general/views.html
@@ -133,7 +133,7 @@ class Page extends Controller {<br /><br />
 <p>In the example above，we are using &quot;dynamically added data&quot;，which you will see below.</p>
 <h2>Storing Views within Sub-folders</h2>
 <p>Your view files can also be stored within sub-folders if you prefer that type of organization.  When doing so you will need
-to include the folder name loading the view.  Example:</p>
+to include the folder name loading the view.  參考範例:</p>
 
 <code>$this->load->view('<kbd>folder_name</kbd>/<var>file_name</var>');</code>
 
