--- a/helpers/array_helper.html
+++ b/helpers/array_helper.html
@@ -71,7 +71,7 @@ Array 補助函數
 <h2>element()</h2>
 
 <p>Lets you fetch an item from an array.  The function tests whether the array index is set and whether it has a value.  If
-a value exists it is returned.  If a value does not exist it returns FALSE，or whatever you've specified as the default value via the third parameter.  Example:</p>
+a value exists it is returned.  If a value does not exist it returns FALSE，or whatever you've specified as the default value via the third parameter.  參考範例:</p>
 
 <code>
 $array = array('color' => 'red'，'shape' => 'round'，'size' => '');<br />
@@ -86,7 +86,7 @@ echo element('size'，$array，NULL);
 
 <h2>random_element()</h2>
 
-<p>Takes an array as input and returns a random element from it.  Usage example:</p>
+<p>Takes an array as input and returns a random element from it.  使用範例:</p>
 
 <code>$quotes = array(<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"I find that the harder I work，the more luck I seem to have. - Thomas Jefferson",<br />
