--- a/helpers/typography_helper.html
+++ b/helpers/typography_helper.html
@@ -73,7 +73,7 @@ Typography 補助函數
 
 <p>Formats text so that it is semantically and typographically correct HTML.  Please see the <a href="../libraries/typography.html">Typography Class</a> for more info.</p>
 
-<p>Usage example:</p>
+<p>使用範例:</p>
 
 <code>$string = auto_typography($string);</code>
 
@@ -87,7 +87,7 @@ If you choose to use this function you may want to consider
 <p>Converts newlines to &lt;br /&gt; tags unless they appear within &lt;pre&gt; tags.
 This function is identical to the native PHP <dfn>nl2br()</dfn> function，except that it ignores &lt;pre&gt; tags.</p>
 
-<p>Usage example:</p>
+<p>使用範例:</p>
 
 <code>$string = nl2br_except_pre($string);</code>
 
