--- a/libraries/benchmark.html
+++ b/libraries/benchmark.html
@@ -72,7 +72,7 @@ timing of the entire system execution to be shown.</p>
 <h3>目錄</h3>
 
 <ul>
-<li><a href="#using">使用 Benchmark Class</a></li>
+<li><a href="#using">使用 Benchmark 類別</a></li>
 <li><a href="#profiler">Profiling Your Benchmark Points</a></li>
 <li><a href="#execution">顯示全部的執行時間</a></li>
 <li><a href="#memory">顯示記憶體消耗量</a></li>
@@ -81,7 +81,7 @@ timing of the entire system execution to be shown.</p>
 
 
 <a name="using"></a>
-<h2>使用 Benchmark Class</h2>
+<h2>使用 Benchmark 類別</h2>
 
 <p>The Benchmark class can be used within your <a href="../general/controllers.html">controllers</a>， <a href="../general/views.html">views</a>，or your  <a href="../general/models.html">Models</a>.  The process for usage is this:</p>
 
@@ -102,7 +102,7 @@ $this->benchmark->mark('code_end');<br />
 echo $this->benchmark->elapsed_time('code_start'，'code_end');</code>
 
 <p class="important"><strong>注意:</strong> The words "code_start" and "code_end" are arbitrary.  They are simply words used to set two markers.  You can
-use any words you want，and you can set multiple sets of markers. Consider this example:</p>
+use any words you want，and you can set multiple sets of markers. Consider this 參考範例:</p>
 
 <code>$this->benchmark->mark('dog');<br />
 <br />
@@ -125,7 +125,7 @@ echo $this->benchmark->elapsed_time('dog'，'bird');</code>
 <p>If you want your benchmark data to be available to the
 <a href="../general/profiling.html">Profiler</a> all of your marked points must be set up in pairs，and
 each mark point name must end with <kbd>_start</kbd> and <kbd>_end</kbd>.
-Each pair of points must otherwise be named identically. Example:</p>
+Each pair of points must otherwise be named identically. 參考範例:</p>
 
 <code>
 $this->benchmark->mark('my_mark<kbd>_start</kbd>');<br />
