--- a/libraries/encryption.html
+++ b/libraries/encryption.html
@@ -98,7 +98,7 @@ with an encoded string that is roughly 55 characters (we say "roughly" because t
 for example，can only hold 4K of information.</p>
 
 
-<h2>Initializing the Class</h2>
+<h2>Initializing the 類別</h2>
 
 <p>Like most other classes in CodeIgniter，the Encryption class is initialized in your controller using the <dfn>$this->load->library</dfn> function:</p>
 
@@ -108,7 +108,7 @@ for example，can only hold 4K of information.</p>
 
 <h2>$this->encrypt->encode()</h2>
 
-<p>Performs the data encryption and returns it as a string. Example:</p>
+<p>Performs the data encryption and returns it as a string. 參考範例:</p>
 <code>
 $msg = 'My secret message';<br />
 <br />
@@ -125,7 +125,7 @@ $encrypted_string = $this->encrypt->encode($msg，$key);</code>
 
 <h2>$this->encrypt->decode()</h2>
 
-<p>Decrypts an encoded string.  Example:</p>
+<p>Decrypts an encoded string.  參考範例:</p>
 
 <code>
 $encrypted_string = 'APANtByIGI1BpVXZTJgcsAG8GZl8pdwwa84';<br />
@@ -135,7 +135,7 @@ $plaintext_string = $this->encrypt->decode($encrypted_string);</code>
 
 <h2>$this->encrypt->set_cipher();</h2>
 
-<p>Permits you to set an Mcrypt cipher.  By default it uses <samp>MCRYPT_RIJNDAEL_256</samp>.  Example:</p>
+<p>Permits you to set an Mcrypt cipher.  By default it uses <samp>MCRYPT_RIJNDAEL_256</samp>.  參考範例:</p>
 <code>$this->encrypt->set_cipher(MCRYPT_BLOWFISH);</code>
 <p>Please visit php.net for a list of  <a href="http://php.net/mcrypt">available ciphers</a>.</p>
 
@@ -145,13 +145,13 @@ $plaintext_string = $this->encrypt->decode($encrypted_string);</code>
 
 <h2>$this->encrypt->set_mode();</h2>
 
-<p>Permits you to set an Mcrypt mode.  By default it uses <samp>MCRYPT_MODE_ECB</samp>.  Example:</p>
+<p>Permits you to set an Mcrypt mode.  By default it uses <samp>MCRYPT_MODE_ECB</samp>.  參考範例:</p>
 <code>$this->encrypt->set_mode(MCRYPT_MODE_CFB);</code>
 <p>Please visit php.net for a list of  <a href="http://php.net/mcrypt">available modes</a>.</p>
 
 
 <h2>$this->encrypt->sha1();</h2>
-<p>SHA1 encoding function.  Provide a string and it will return a 160 bit one way hash.  注意:  SHA1，just like MD5 is non-decodable. Example:</p>
+<p>SHA1 encoding function.  Provide a string and it will return a 160 bit one way hash.  注意:  SHA1，just like MD5 is non-decodable. 參考範例:</p>
 <code>$hash = $this->encrypt->sha1('Some string');</code>
 
 <p>Many PHP installations have SHA1 support by default so if all you need is to encode a hash it's simpler to use the native
@@ -173,7 +173,7 @@ function:</p>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="file_uploading.html">File Uploading Class</a>
+下個主題:&nbsp;&nbsp;<a href="file_uploading.html">File Uploading 類別</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
