--- a/libraries/input.html
+++ b/libraries/input.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Input Class : CodeIgniter 使用手冊</title>
+<title>Input 類別 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Input and Security Class
+Input and Security 類別
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,9 +56,9 @@ Input and Security Class
 <div id="content">
 
 
-<h1>Input Class</h1>
+<h1>Input 類別</h1>
 
-<p>The Input Class serves two purposes:</p>
+<p>The Input 類別 serves two purposes:</p>
 
 <ol>
 <li>It pre-processes global input data for security.</li>
@@ -98,7 +98,7 @@ or do other malicious things.  If anything disallowed is encountered it is rende
 
 <h2>$this->input->xss_clean()</h2>
 
-<p>Here is an usage example:</p>
+<p>Here is an usage 參考範例:</p>
 
 <code>$data = $this->input->xss_clean($data);</code>
 
@@ -218,11 +218,11 @@ else<br />
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="image_lib.html">Image Manipulation Class</a>
+上個主題:&nbsp;&nbsp;<a href="image_lib.html">Image Manipulation 類別</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="loader.html">Loader Class</a>
+下個主題:&nbsp;&nbsp;<a href="loader.html">Loader 類別</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
