--- a/libraries/output.html
+++ b/libraries/output.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Output Class : CodeIgniter 使用手冊</title>
+<title>Output 類別 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Output Class
+Output 類別
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,7 +56,7 @@ Output Class
 <div id="content">
 
 
-<h1>Output Class</h1>
+<h1>Output 類別</h1>
 
 <p>The Output class is a small class with one main function:  To send the finalized web page to the requesting browser.  It is
 also responsible for <a href="../general/caching.html">caching</a> your web pages，if you use that feature.</p>
@@ -70,7 +70,7 @@ It is possible，however，for you to manually intervene with the output if you 
 
 <h2>$this->output->set_output();</h2>
 
-<p>Permits you to manually set the final output string.  Usage example:</p>
+<p>Permits you to manually set the final output string.  使用範例:</p>
 
 <code>$this->output->set_output($data);</code>
 
@@ -80,7 +80,7 @@ For example，if you build a page in one of your controller functions，don't se
 
 <h2>$this->output->get_output();</h2>
 
-<p>Permits you to manually retrieve any output that has been sent for storage in the output class.  Usage example:</p>
+<p>Permits you to manually retrieve any output that has been sent for storage in the output class.  使用範例:</p>
 <code>$string = $this->output->get_output();</code>
 
 <p>Note that data will only be retrievable from this function if it has been previously sent to the output class by one of the
@@ -89,7 +89,7 @@ CodeIgniter functions like <var>$this->load->view()</var>.</p>
 
 <h2>$this->output->set_header();</h2>
 
-<p>Permits you to manually set server headers，which the output class will send for you when outputting the final rendered display.  Example:</p>
+<p>Permits you to manually set server headers，which the output class will send for you when outputting the final rendered display.  參考範例:</p>
 
 <code>
 $this->output->set_header("HTTP/1.0 200 OK");<br />
@@ -102,7 +102,7 @@ $this->output->set_header("Pragma: no-cache");	</code>
 
 <h2>$this->output->set_status_header();</h2>
 
-<p>Permits you to manually set a server status header.  Example:</p>
+<p>Permits you to manually set a server status header.  參考範例:</p>
 
 <code>$this->output->set_status_header('401');<br />
 // Sets the header as:  Unauthorized</code>
@@ -132,11 +132,11 @@ at the bottom of your pages for debugging and optimization purposes.</p>
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="language.html">Language Class</a>
+上個主題:&nbsp;&nbsp;<a href="language.html">Language 類別</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="pagination.html">Pagination Class</a>
+下個主題:&nbsp;&nbsp;<a href="pagination.html">Pagination 類別</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
