--- a/libraries/parser.html
+++ b/libraries/parser.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Template Parser Class : CodeIgniter 使用手冊</title>
+<title>Template Parser 類別 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Template Parser Class
+Template Parser 類別
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -58,9 +58,9 @@ Template Parser Class
 
 
 
-<h1>Template Parser Class</h1>
+<h1>Template Parser 類別</h1>
 
-<p>The Template Parser Class enables you to parse pseudo-variables contained within your view files. It can parse simple
+<p>The Template Parser 類別 enables you to parse pseudo-variables contained within your view files. It can parse simple
 variables or variable tag pairs. If you've never used a template engine，pseudo-variables look like this:</p>
 
 <code>&lt;html&gt;<br />
@@ -86,11 +86,11 @@ PHP from your templates (view files).</p>
 since using pure PHP in your view pages lets them run a little faster.  However，some developers prefer to use a template engine if
 they work with designers who they feel would find some confusion working with PHP.</p>
 
-<p><strong>Also 注意:</strong> The Template Parser Class is <strong>not</strong>  a
+<p><strong>Also 注意:</strong> The Template Parser 類別 is <strong>not</strong>  a
 full-blown template parsing solution. We've kept it very lean on purpose in order to maintain 最大效能.</p>
 
 
-<h2>Initializing the Class</h2>
+<h2>Initializing the 類別</h2>
 
 <p>Like most other classes in CodeIgniter，the Parser class is initialized in your controller using the <dfn>$this->load->library</dfn> function:</p>
 
@@ -102,7 +102,7 @@ full-blown template parsing solution. We've kept it very lean on purpose in orde
 
 <h2>$this->parser->parse()</h2>
 
-<p>This method accepts a template name and data array as input，and it generates a parsed version.  Example:</p>
+<p>This method accepts a template name and data array as input，and it generates a parsed version.  參考範例:</p>
 
 <code>$this->load->library('parser');<br />
 <br />
@@ -151,7 +151,7 @@ to the number of rows in a result.</p>
 
 <p>Parsing variable pairs is done using the identical code shown above to parse single variables,
 except，you will add a multi-dimensional array corresponding to your variable pair data.
-Consider this example:</p>
+Consider this 參考範例:</p>
 
 
 <code>$this->load->library('parser');<br />
@@ -195,7 +195,7 @@ $this->parser->parse('blog_template'，$data);</code>
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="trackback.html">Trackback Class</a>
+上個主題:&nbsp;&nbsp;<a href="trackback.html">Trackback 類別</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
