--- a/libraries/table.html
+++ b/libraries/table.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>HTML Table Class : CodeIgniter 使用手冊</title>
+<title>HTML Table 類別 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-HTML Table Class
+HTML Table 類別
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,11 +56,11 @@ HTML Table Class
 <div id="content">
 
 
-<h1>HTML Table Class</h1>
+<h1>HTML Table 類別</h1>
 
-<p>The Table Class provides functions that enable you to auto-generate HTML tables from arrays or database result sets.</p>
+<p>The Table 類別 provides functions that enable you to auto-generate HTML tables from arrays or database result sets.</p>
 
-<h2>Initializing the Class</h2>
+<h2>Initializing the 類別</h2>
 
 <p>Like most other classes in CodeIgniter，the Table class is initialized in your controller using the <dfn>$this->load->library</dfn> function:</p>
 
@@ -131,7 +131,7 @@ echo $this->table->generate();
 
 <h2>Changing the Look of Your Table</h2>
 
-<p>The Table Class permits you to set a table template with which you can specify the design of your layout.  Here is the template
+<p>The Table 類別 permits you to set a table template with which you can specify the design of your layout.  Here is the template
 prototype:</p>
 
 <code>
@@ -205,7 +205,7 @@ $this->table->set_template($tmpl);
 <p>This function takes a one-dimensional array as input and creates
 a multi-dimensional array with a depth equal to the number of
 columns desired.  This allows a single array with many elements to  be
-displayed in a table that has a fixed column count.  Consider this example:</p>
+displayed in a table that has a fixed column count.  Consider this 參考範例:</p>
 
 <code>
 $list = array('one'，'two'，'three'，'four'，'five'，'six'，'seven'，'eight'，'nine'，'ten'，'eleven'，'twelve');<br />
@@ -252,7 +252,7 @@ $this->table->set_empty("&amp;nbsp;");
 <h2>$this->table->clear()</h2>
 
 <p>Lets you clear the table heading and row data.  If you need to show multiple tables with different data you should
-to call this function after each table has been generated to empty the previous table information. Example:</p>
+to call this function after each table has been generated to empty the previous table information. 參考範例:</p>
 
 <code>
 $this->load->library('table');<br />
@@ -280,10 +280,10 @@ echo $this->table->generate();
 
 <div id="footer">
 <p>
-上個主題:&nbsp;<a href="ftp.html">&nbsp;FTP Class</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
+上個主題:&nbsp;<a href="ftp.html">&nbsp;FTP 類別</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="image_lib.html">Image Manipulation Class</a>
+下個主題:&nbsp;&nbsp;<a href="image_lib.html">Image Manipulation 類別</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
