--- a/libraries/unit_testing.html
+++ b/libraries/unit_testing.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Unit Testing Class : CodeIgniter 使用手冊</title>
+<title>Unit Testing 類別 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Unit Testing Class
+Unit Testing 類別
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,7 +56,7 @@ Unit Testing Class
 <div id="content">
 
 
-<h1>Unit Testing Class</h1>
+<h1>Unit Testing 類別</h1>
 
 <p>Unit testing is an approach to software development in which tests are written for each function in your application.
 If you are not familiar with the concept you might do a little googling on the subject.</p>
@@ -67,7 +67,7 @@ to determine if it is producing the correct data type and result.
 </p>
 
 
-<h2>Initializing the Class</h2>
+<h2>Initializing the 類別</h2>
 
 <p>Like most other classes in CodeIgniter，the Unit Test class is initialized in your controller using the <dfn>$this->load->library</dfn> function:</p>
 
@@ -82,7 +82,7 @@ to determine if it is producing the correct data type and result.
 <h2>$this->unit->run( <var>test</var>，<var>expected result</var>，'<var>test name</var>' );</h2>
 
 <p>Where <var>test</var> is the result of the code you wish to test,
-<var>expected result</var> is the data type you expect，and <var>test name</var> is an optional name you can give your test. Example:</p>
+<var>expected result</var> is the data type you expect，and <var>test name</var> is an optional name you can give your test. 參考範例:</p>
 
 <code>$test = 1 + 1;<br />
 <br />
@@ -135,7 +135,7 @@ To show a report directly simply echo or return the <var>run</var> function:</p>
 
 <h2>Strict Mode</h2>
 
-<p>By default the unit test class evaluates literal matches loosely.  Consider this example:</p>
+<p>By default the unit test class evaluates literal matches loosely.  Consider this 參考範例:</p>
 
 <code>$this->unit->run(1，TRUE);</code>
 
@@ -192,11 +192,11 @@ $this->unit->set_template($str);
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="typography.html">Typography Class</a>
+上個主題:&nbsp;&nbsp;<a href="typography.html">Typography 類別</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="uri.html">URI Class</a>
+下個主題:&nbsp;&nbsp;<a href="uri.html">URI 類別</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
