--- a/libraries/zip.html
+++ b/libraries/zip.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Zip Encoding Class : CodeIgniter 使用手冊</title>
+<title>Zip Encoding 類別 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Zip Encoding Class
+Zip Encoding 類別
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,12 +56,12 @@ Zip Encoding Class
 <div id="content">
 
 
-<h1>Zip Encoding Class</h1>
-<p>CodeIgniter's Zip Encoding Class classes permit you to create Zip archives. Archives can be downloaded to your
+<h1>Zip Encoding 類別</h1>
+<p>CodeIgniter's Zip Encoding 類別 classes permit you to create Zip archives. Archives can be downloaded to your
 desktop or saved to a directory.</p>
 
 
-<h2>Initializing the Class</h2>
+<h2>Initializing the 類別</h2>
 <p>Like most other classes in CodeIgniter，the Zip class is initialized in your controller using the <dfn>$this->load->library</dfn> function:</p>
 
 <code>$this->load->library('zip');</code>
@@ -100,7 +100,7 @@ $this->zip->add_data($name，$data);
 </code>
 
 <p>You are allowed multiple calls to this function in order to
-add several files to your archive.  Example:</p>
+add several files to your archive.  參考範例:</p>
 
 <code>
 $name = 'mydata1.txt';<br />
@@ -140,7 +140,7 @@ $this->zip->add_data($name，$data);
 <h2>$this->zip->add_dir()</h2>
 
 <p>Permits you to add a directory.  Usually this function is unnecessary since you can place your data into folders when
-using <dfn>$this->zip->add_data()</dfn>，but if you would like to create an empty folder you can do so.  Example:</p>
+using <dfn>$this->zip->add_data()</dfn>，but if you would like to create an empty folder you can do so.  參考範例:</p>
 
 <code>$this->zip->add_dir('myfolder'); // Creates a folder called "myfolder"</code>
 
@@ -160,7 +160,7 @@ $this->zip->download('my_backup.zip');
 </code>
 
 <p>If you would like the Zip archive to maintain the directory structure of the file in it，pass <kbd>TRUE</kbd> (boolean) in the
-second parameter.  Example:</p>
+second parameter.  參考範例:</p>
 
 
 <code>
@@ -179,7 +179,7 @@ $this->zip->download('my_backup.zip');
 
 <p>Permits you to compress a folder (and its contents) that already exists somewhere on your server.  Supply a file path to the 
 directory and the zip class will recursively read it and recreate it as a Zip archive.  All files contained within the
-supplied path will be encoded，as will any sub-folders contained within it.  Example:</p>
+supplied path will be encoded，as will any sub-folders contained within it.  參考範例:</p>
 
 <code>
 $path = '/path/to/your/directory/';<br /><br />
@@ -195,7 +195,7 @@ $this->zip->download('my_backup.zip');
 <h2>$this->zip->archive()</h2>
 
 <p>Writes the Zip-encoded file to a directory on your server.  Submit a valid server path ending in the file name.  Make sure the
-directory is writable (666 or 777 is usually OK). Example:</p>
+directory is writable (666 or 777 is usually OK). 參考範例:</p>
 
 <code>$this->zip->archive('/path/to/folder/myarchive.zip'); // Creates a file named myarchive.zip</code>
 
@@ -203,7 +203,7 @@ directory is writable (666 or 777 is usually OK). Example:</p>
 <h2>$this->zip->download()</h2>
 
 <p>Causes the Zip file to be downloaded from your server. The function must be passed the name you would like the zip file called.
-Example:</p>
+參考範例:</p>
 
 <code>$this->zip->download('latest_stuff.zip'); // File will be named "latest_stuff.zip"</code>
 
@@ -214,7 +214,7 @@ that cause the download to happen and the file to be treated as binary.</p>
 <h2>$this->zip->get_zip()</h2>
 
 <p>Returns the Zip-compressed file data.  Generally you will not need this function unless you want to do something unique with the data.
-Example:</p>
+參考範例:</p>
 
 <code>
 $name = 'my_bio.txt';<br />
@@ -229,7 +229,7 @@ $zip_file = $this->zip->get_zip();
 <h2>$this->zip->clear_data()</h2>
 
 <p>The Zip class caches your zip data so that it doesn't need to recompile the Zip archive for each function you use above.
-If，however，you need to create multiple Zips，each with different data，you can clear the cache between calls. Example:</p>
+If，however，you need to create multiple Zips，each with different data，you can clear the cache between calls. 參考範例:</p>
 
 <code>
 $name = 'my_bio.txt';<br />
@@ -265,7 +265,7 @@ $this->zip->download('myphotos.zip');
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="xmlrpc.html"> XML-RPC Class</a>
+上個主題:&nbsp;&nbsp;<a href="xmlrpc.html"> XML-RPC 類別</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
