--- a/overview/mvc.html
+++ b/overview/mvc.html
@@ -58,25 +58,21 @@ MVC
 
 <h1>模型-檢視-控制器</h1>
 
-<p>CodeIgniter 基於模型-檢視-控制器 開發模式.
-
-MVC is a software approach that separates application logic from presentation.  In practice，it permits your web pages to contain minimal scripting since the presentation is separate from the PHP scripting.</p>
+<p>CodeIgniter 基於模型-檢視-控制器的開發模式。MVC 是把程式邏輯從視覺的呈現拆開的一種軟體開發方法。實務上，它允許你的網頁包含最少的程式，一但視覺呈現的部份從 PHP 程式中分離出來。</p>
 
 <ul>
-<li>The <strong>Model</strong> represents your data structures. Typically your model classes will contain functions that help you
-retrieve，insert，and update information in your  database.</li>
-<li>The <strong>View</strong> is the information that is being presented to a user.  A View will normally be a web page，but
-in CodeIgniter，a view can also be a page fragment like a header or footer. It can also be an RSS page，or any other type of "page".</li>
-<li>The <strong>Controller</strong> serves as an <em>intermediary</em> between the Model，the View,
-and any other resources needed to process the HTTP request and generate a web page.</li>
+<li><strong>模型(Model)</strong> 代表的結構是你的資料。通常模型類別包含許多函數可用，可以幫助你完成 retrieve，insert，update 資料到你的資料庫裡頭。</li>
+<li><strong>檢視(View)</strong> 用來呈現給使用者的資訊。檢視(View)通常是網頁型式，但是在 CodeIgniter 裡頭，檢視(View)也可以是網頁的片斷，像是 header 或是 footer。他也可以是 RSS 頁面，或是任何其他型式的"頁面(page)"。</li>
+
+<li><strong>控制器(Controller)</strong> 提供像是 <em>中間人的角色</em> 在模型(Model)跟檢視(View)之間，或者是任何其他的資源需要處理 HTTP request 以及產生網頁的地方出現。</li>
 
 </ul>
 
-<p>CodeIgniter has a fairly loose approach to MVC since Models are not required.
-If you don't need the added separation，or find that maintaining models requires more complexity than you
-want，you can ignore them and build your application minimally using Controllers and Views. CodeIgniter also
-enables you to incorporate your own existing scripts，or even develop core libraries for the system,
- enabling you to work in a way that makes the most sense to you.</p>
+<p>CodeIgniter 以寬鬆的 MVC 方式，也就是模型(Models)並非一定要有的。
+
+如果你需要分散的方式，或是覺得維護模型(Models)比你想的還要複雜的話，你可以不用內建的 MVC，然後使用少量的控制器(Controller)跟檢視(View)建立自己所需 application。
+
+CodeIgniter 也可以允取你採用自己現存的 scripts 或是開發系統核心程式庫、讓你以最方便的方式來開發系統。</p>
 
 
 
